# garmin-auth

./: .gitignore  AI_HANDOVER.md  CHANGELOG.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: releasing.md  storage.md  troubleshooting.md
src/garmin_auth/: __init__.py  auth.py  cli.py  rate_limiter.py  sso.py  storage.py  types.py
tests/: conftest.py  test_auth.py  test_cli.py  test_rate_limiter.py  test_sso.py  test_storage.py
