[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "garmin-auth"
version = "0.3.0"
description = "Self-healing Garmin Connect authentication with 2FA/MFA support, token refresh, and rate limit recovery"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Konstantinos Georgiou", email = "delfinas7kostas@gmail.com" }]
keywords = ["garmin", "oauth", "authentication", "garmin-connect", "fitness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "garminconnect>=0.3.0,<0.4.0",
    "requests>=2.31",
    "curl_cffi>=0.6",
    "ua-generator>=1.0",
]

[project.optional-dependencies]
db = ["psycopg2-binary>=2.9"]
dev = ["pytest>=8.0", "pytest-mock>=3.12"]

[project.scripts]
garmin-auth = "garmin_auth.cli:main"

[project.urls]
Homepage = "https://github.com/drkostas/garmin-auth"
Repository = "https://github.com/drkostas/garmin-auth"

[tool.hatch.build.targets.wheel]
packages = ["src/garmin_auth"]
